Fix colors of: editor clear button, editor readonly border, scrollbar background

--- a/styles/widgets/generic/color-schemes/darkmoon/generic.darkmoon.less
+++ b/styles/widgets/generic/color-schemes/darkmoon/generic.darkmoon.less
@@ -192,7 +192,7 @@
 
 @texteditor-color: @base-text-color;
 @texteditor-disabled-opacity: .5;
-@texteditor-readonly-border-color: darken(@texteditor-border-color, 9%);
+@texteditor-readonly-border-color: fade(@texteditor-border-color, 50%);
 
 /**
 * @name 60. Placeholder text color
@@ -201,7 +201,7 @@
 */
 @texteditor-placeholder-color: darken(@base-label-color, 17%); // #c1c7c9 => #919ea3
 
-@texteditor-button-clear-icon-color: darken(@texteditor-color, 40%);
+@texteditor-button-clear-icon-color: @base-icon-color;
 
 @texteditor-invalid-focused-border-color: @base-invalid-color;
 @texteditor-invalid-faded-border-color: @base-invalid-faded-border-color;
@@ -998,8 +998,8 @@
 * @type color
 * @group scrollview
 */
-@scrollable-scroll-bg: fade(@base-accent, 50%);
-@scrollable-scroll-active-bg: lighten(@scrollable-bg, 25%);
+@scrollable-scroll-bg: fade(@base-accent, 80%);
+@scrollable-scroll-active-bg: @base-accent;
 @scrollable-scroll-shadow-color: transparent;
 
 @scrollable-scrollbar-bg: transparent;
