--- a/styles/widgets/generic/color-schemes/darkviolet/generic.darkviolet.less
+++ b/styles/widgets/generic/color-schemes/darkviolet/generic.darkviolet.less
@@ -197,7 +197,7 @@
 
 @texteditor-color: @base-text-color;
 @texteditor-disabled-opacity: .5;
-@texteditor-readonly-border-color: darken(@texteditor-border-color, 9%);
+@texteditor-readonly-border-color: fade(@texteditor-border-color, 50%);
 
 /**
 * @name 60. Placeholder text color
@@ -206,7 +206,7 @@
 */
 @texteditor-placeholder-color: darken(@texteditor-color, 40%);
 
-@texteditor-button-clear-icon-color: darken(@texteditor-color, 40%);
+@texteditor-button-clear-icon-color: @base-icon-color;
 
 @texteditor-invalid-focused-border-color: @base-invalid-color;
 @texteditor-invalid-faded-border-color: @base-invalid-faded-border-color;
@@ -1003,8 +1003,8 @@
 * @type color
 * @group scrollview
 */
-@scrollable-scroll-bg: @base-hover-background;
-@scrollable-scroll-active-bg: lighten(@scrollable-bg, 25%);
+@scrollable-scroll-bg: fade(@base-accent, 80%);
+@scrollable-scroll-active-bg: @base-accent;
 @scrollable-scroll-shadow-color: transparent;
 
 @scrollable-scrollbar-bg: transparent;
